# mokm-compositor

./: readme
code/: CMakeLists.txt
code/src/functions/: CMakeLists.txt
code/src/providers/: readme
code/src/ui/: CMakeLists.txt  Main.qml  Theme.qml
code/src/ui/attribute_inspector/: AttributeInspector.qml
code/src/ui/keyboard_shortcuts/: ShortcutMapper.qml  qmldir
code/src/ui/media_bin/: MediaBinWorkspace.qml
code/src/ui/node_editor/: NodeEditorWorkspace.qml
code/src/ui/plugin_manager/: PluginManagerModal.qml  qmldir
code/src/ui/preferences/: PreferencesModal.qml  qmldir
code/src/ui/project_settings/: ProjectSettingsModal.qml  qmldir
code/src/ui/proxy_manager/: ProxyDashboard.qml  qmldir
code/src/ui/timeline/: TimelineWorkspace.qml
web/: react-router.config.ts  vite.config.ts
web/app/: app.css  root.tsx
web/app/routes/: home.tsx
web/app/sections/: Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  NodeCanvas.tsx  ProxyHighlight.tsx  Roadmap.tsx  TechStack.tsx  Workflow.tsx
